[gd_scene load_steps=3 format=3 uid="uid://bsg1hcju7aqna"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_iyy6h"]
[ext_resource type="Script" path="res://scripts/inventory_grid.gd" id="1_wek1o"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iyy6h")

[node name="InventoryPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(400, 288)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryGrid" type="GridContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
columns = 8
script = ExtResource("1_wek1o")

[connection signal="hidden" from="InventoryPanel" to="." method="_on_inventory_panel_hidden"]
